K_NN : Word2Vec

--- a/K_Nearest_Neighbours.ipynb
+++ b/K_Nearest_Neighbours.ipynb
@@ -2111,7 +2111,7 @@
       },
       "cell_type": "code",
       "source": [
-        ""
+        "#creating tfidf vectors"
       ],
       "execution_count": 0,
       "outputs": []
