Final Train Test preprocessing for all the 4 featurization techniques for Amazon Fine Food Reviews Dataset

--- a/Machine_Learning_Data_Pre_processing.ipynb
+++ b/Machine_Learning_Data_Pre_processing.ipynb
@@ -210,7 +210,8 @@
         "from tqdm import tqdm\n",
         "import sqlite3\n",
         "import re\n",
-        "from datetime import datetime"
+        "from datetime import datetime\n",
+        "import pickle"
       ],
       "execution_count": 0,
       "outputs": []
@@ -931,46 +932,6 @@
     },
     {
       "metadata": {
-        "id": "bvonh119pI5P",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "08a0c41a-6955-4fba-d163-d7e5e1346036"
-      },
-      "cell_type": "code",
-      "source": [
-        "!ls"
-      ],
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "final.sqlite  gdrive  sample_data\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "rWterLhQpQuH",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        "### DATA SAMPLING:\n",
-        "\n",
-        "1. SORT BY TIME FIRST \n",
-        "2. TAKING ALL THE POINTS IS NOT FEASIBLE FOR COMPUTATION \n",
-        "3. DO STRATIFIED SHUFFLED SPLIT TO SEPARATE THE DATASET INTO QUARTERS BUT STILL MAINTAIN CLASS RATIOS AND PROPORTIONS\n",
-        "4.  IN ONE OF SUBSETS OF THE SPLIT , SORT THE TIME LINE AGAIN AND TIME BASED SPLIT ON 70-30 TO GET THE TRAIN AND THE TEST\n"
-      ]
-    },
-    {
-      "metadata": {
         "id": "h1vG87TUpQRP",
         "colab_type": "code",
         "colab": {}
@@ -1505,22 +1466,6 @@
     },
     {
       "metadata": {
-        "id": "d4DF0XJj2wak",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.metrics import confusion_matrix,classification_report,accuracy_score\n",
-        "from sklearn.model_selection import cross_val_score\n",
-        "from sklearn.preprocessing import StandardScaler"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
         "id": "Q1AdGb7j6UlF",
         "colab_type": "text"
       },
@@ -1631,7 +1576,7 @@
         "\n",
         "-----------\n",
         "\n",
-        "## FEATURIZATION 1 : WORD2VEC "
+        "## FEATURIZATION 1 : AVERAGE WORD2VEC "
       ]
     },
     {
@@ -1793,29 +1738,220 @@
     },
     {
       "metadata": {
+        "id": "Z5nUKZbhHf5f",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## FEATURIZATION 2 : BOW"
+      ]
+    },
+    {
+      "metadata": {
         "id": "3VlCuQ43Ey-X",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        ""
+        "#intiailising the bag words count vectorizer\n",
+        "count_vect = CountVectorizer() #in scikit-learn\n",
+        "train_bow = count_vect.fit_transform(train['CleanedText'].values)\n",
+        "test_bow = count_vect.transform(test['CleanedText'].values)"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
       "metadata": {
-        "id": "pkoSQl9kE0-4",
+        "id": "zackCd_WVR9v",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## FEATURIZATION 3 : TFIDF : UNIGRAM TF_IDF"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "kpNYRmc2IocZ",
         "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
       "source": [
-        ""
+        "tf_idf = TfidfVectorizer(lowercase=True,ngram_range=(1,1))\n",
+        "train_tfidf = tf_idf.fit_transform(train['CleanedText'].values)\n",
+        "test_tfidf = tf_idf.transform(test['CleanedText'].values)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "8tgOkypOWXIu",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## FEATURIZATION 4 : TFIDF WORD2VEC"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "tMjoXzsTWW3z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "#traing the tfidfVectorizer only for train dataset\n",
+        "model = TfidfVectorizer(lowercase=True,ngram_range=(1,1))\n",
+        "tf_idf_matrix = model.fit_transform(train['CleanedText'].values)\n",
+        "# we are converting a dictionary with word as a key, and the idf as a value\n",
+        "dictionary = dict(zip(model.get_feature_names(), list(model.idf_)))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Y9oDNBnuaUCA",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "_________________\n",
+        "\n",
+        "Preparing the TFIDF WORD2VEC  of Train data \n",
+        "_________________\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "DXMpzx7IV61y",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8314c63b-8154-4945-ade5-a655709f1021"
+      },
+      "cell_type": "code",
+      "source": [
+        "tfidf_sent_vectors = []; # the tfidf-w2v for each sentence/review is stored in this list\n",
+        "row=0;\n",
+        "for sent in tqdm(list_of_sent_train): # for each review/sentence \n",
+        "    sent_vec = np.zeros(50) # as word vectors are of zero length\n",
+        "    weight_sum =0; # num of words with a valid vector in the sentence/review\n",
+        "    for word in sent: # for each word in a review/sentence\n",
+        "        if word in w2v_model:\n",
+        "            vec = w2v_model.wv[word]\n",
+        "#             tf_idf = tf_idf_matrix[row, tfidf_feat.index(word)]\n",
+        "            # to reduce the computation we are \n",
+        "            # dictionary[word] = idf value of word in whole courpus\n",
+        "            # sent.count(word) = tf values of word in this review\n",
+        "            tf_idf = dictionary[word]*sent.count(word)\n",
+        "            sent_vec += (vec * tf_idf)\n",
+        "            weight_sum += tf_idf\n",
+        "    if weight_sum != 0:\n",
+        "        sent_vec /= weight_sum\n",
+        "    tfidf_sent_vectors.append(sent_vec)\n",
+        "    row += 1\n",
+        "  \n",
+        "#------------------------------------------------------------------------------\n",
+        "c= []\n",
+        "for i in range(0,50):\n",
+        "    c.append(\"Vector \" + str(i+1))\n",
+        "train_tfw2v = pd.DataFrame(tfidf_sent_vectors,columns=c)\n",
+        "train_tfw2v['Score']= list(train['Score'])"
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 70000/70000 [00:45<00:00, 1533.88it/s]\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "VXPcgGyfaESX",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "_________________\n",
+        "\n",
+        "Preparing the TFIDF WORD2VEC  of Test data \n",
+        "_________________\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "PlSERSXLWOWt",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8340eb46-22fe-47d3-8e2a-3f11e098bd51"
+      },
+      "cell_type": "code",
+      "source": [
+        "tfidf_sent_vectors = []; # the tfidf-w2v for each sentence/review is stored in this list\n",
+        "row=0;\n",
+        "for sent in tqdm(list_of_sent_test): # for each review/sentence \n",
+        "    sent_vec = np.zeros(50) # as word vectors are of zero length\n",
+        "    weight_sum =0; # num of words with a valid vector in the sentence/review\n",
+        "    for word in sent: # for each word in a review/sentence\n",
+        "        if word in w2v_model:\n",
+        "            vec = w2v_model.wv[word]\n",
+        "#             tf_idf = tf_idf_matrix[row, tfidf_feat.index(word)]\n",
+        "            # to reduce the computation we are \n",
+        "            # dictionary[word] = idf value of word in whole courpus\n",
+        "            # sent.count(word) = tf values of word in this review\n",
+        "            tf_idf = dictionary[word]*sent.count(word)\n",
+        "            sent_vec += (vec * tf_idf)\n",
+        "            weight_sum += tf_idf\n",
+        "    if weight_sum != 0:\n",
+        "        sent_vec /= weight_sum\n",
+        "    tfidf_sent_vectors.append(sent_vec)\n",
+        "    row += 1\n",
+        "  \n",
+        "#------------------------------------------------------------------------------\n",
+        "c= []\n",
+        "for i in range(0,50):\n",
+        "    c.append(\"Vector \" + str(i+1))\n",
+        "test_tfw2v = pd.DataFrame(tfidf_sent_vectors,columns=c)\n",
+        "test_tfw2v['Score']= list(test['Score'])"
+      ],
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 30000/30000 [00:21<00:00, 1414.42it/s]\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "IVd3R800gjm7",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "----------------\n",
+        "<br>\n",
+        "\n",
+        "### ALL THE DATA OF TRAIN AND TEST OF RESPECTIVE FEATURIZATIONS HAS BEEN PUSHED INTO GOOGLE DRIVE IN PICKLE SERIALIZED FORMAT FOR DIRECT FUTURE USE"
+      ]
     }
   ]
 }
