Naive Bayes : Multinomial NB : Amazon Fine food Reviews Dataset

--- a/Naive_Bayes.ipynb
+++ b/Naive_Bayes.ipynb
@@ -32,7 +32,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## AMAZON FINE FOOD REVIEWS : K NEAREST NEIGHBORS \n",
+        "## AMAZON FINE FOOD REVIEWS : NAIVE BAYES\n",
         "\n",
         "Data Source: https://www.kaggle.com/snap/amazon-fine-food-reviews\n",
         "\n",
